src/objects/AuditProductAnswer__c.object
<CustomObject>
    <fields>
        <fullName>AuditQuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditQuestionId</label>
        <referenceTo>AuditQuestion__c</referenceTo>
        <relationshipLabel>AuditProductAnswers</relationshipLabel>
        <relationshipName>AuditProductAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditResultId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditResultId</label>
        <referenceTo>AuditResult__c</referenceTo>
        <relationshipLabel>AuditProductAnswers</relationshipLabel>
        <relationshipName>AuditProductAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvailabilityStatus__c</fullName>
        <label>AvailabilityStatus</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckFacing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCheckFacing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EANCode__c</fullName>
        <label>EANCode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facing__c</fullName>
        <label>Facing</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMandatoryCooler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMandatoryCooler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerpendicularFacingValue__c</fullName>
        <label>PerpendicularFacingValue</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PoiId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PoiId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>AuditProductAnswers</relationshipLabel>
        <relationshipName>AuditProductAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductId</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>AuditProductAnswers</relationshipLabel>
        <relationshipName>AuditProductAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonText__c</fullName>
        <label>ReasonText</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScanStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsScanStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SellingPrice__c</fullName>
        <label>SellingPrice</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AuditProductAnswer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AuditProductAnswer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditProductAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>